# CMakeList.txt: проект CMake для CPP_practice; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("CPP_practice")

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory(merge_sorting)

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
