# CMakeList.txt: проект CMake для cpp_practice2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (avl_tree "avl_tree.cpp" "avl_tree.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
